# aLayaSiki

./: .gitignore  AGENTS.md  Cargo.toml  QWEN.md  README.md  audit.toml
.agent/skills/code-review/: SKILL.md
.agent/skills/codex/: SKILL.md
.agent/skills/start-task/: SKILL.md
.cargo/: audit.toml
.github/workflows/: ci.yml
benchmarks/: README.md  ann_benchmark.py  benchmark_suite.py  check_ann_regression.py  requirements.txt
benchmarks/baselines/: ann_baseline.json
benchmarks/results/: ann_10k_current.json  ann_20k.json  ann_baseline.json  ann_latest.json  graphrag_production_latest.json  graphrag_production_report.md  operational_latency_pr14_6_write_batch.json  pr14_6_operational_flush_always.json  pr14_6_operational_flush_interval_15ms.json  pr14_6_operational_matrix.md  pr14_6_operational_scale_1m_nodes.json  pr14_6_operational_workers_128.json  pr14_6_operational_workers_8.json  pr14_suite_baseline.json  pr14_suite_baseline.md
benchmarks/results_archive_20260714_084026/: ann_latest_now.json  graphrag_production_baseline.json  operational_latency_baseline.json  operational_latency_latest.json  pr14_6_operational_flush_always.json  pr14_6_operational_flush_batch_32.json  pr14_6_operational_matrix.json  pr14_6_operational_matrix.md  pr14_6_operational_scale_100k_nodes.json  pr14_6_operational_workers_32.json  pr14_suite_baseline.json
benchmarks/tests/: test_benchmark_suite.py
core/: Cargo.toml
core/src/: audit.rs  auth.rs  config.rs  embedding.rs  error.rs  governance.rs  ingest.rs  lib.rs  metrics.rs  model.rs
docs/: PLAN.md  PROMPT.md  RESEARCH.md  SPEC.md
docs/adr/: 0001-feasibility-spikes.md  0002-pr04-pr06-pr065-foundations.md
ingestion/: Cargo.toml
ingestion/src/: api.rs  chunker.rs  embedding.rs  extract.rs  lib.rs  policy.rs  processor.rs
ingestion/tests/: api_payload_test.rs  audit_test.rs  authz_test.rs  durable_queue_ingest_test.rs  e2e_pipeline_test.rs  governance_test.rs  ingestion_test.rs
jobs/: Cargo.toml
jobs/src/: durable.rs  lib.rs  queue.rs  worker.rs
jobs/tests/: durable_queue_test.rs
prototypes/: Cargo.toml
prototypes/benches/: graphrag_production_bench.rs  operational_latency_bench.rs  storage_bench.rs
prototypes/src/: bench_eval.rs  lib.rs
prototypes/tests/: bench_eval_test.rs
query/: Cargo.toml
query/src/: dsl.rs  engine.rs  graphrag.rs  lib.rs  planner.rs  semantic_cache.rs
query/src/engine/: execution.rs  mod.rs  planning.rs  synthesis.rs
query/tests/: audit_test.rs  authz_test.rs  error_mapping_test.rs  graphrag_test.rs  multihop_graphrag_test.rs  output_spec_test.rs  query_test.rs  retention_test.rs  semantic_cache_test.rs  session_graph_test.rs  time_travel_snapshot_test.rs
sdk/: Cargo.toml
sdk/examples/: basic_client.rs
sdk/src/: client.rs  lib.rs
sdk/src/integrations/: langchain.rs  llama_index.rs  mod.rs
sdk/tests/: client_test.rs  framework_adapters_test.rs
slm/: Cargo.toml
slm/src/: lib.rs  lightweight.rs  ner.rs  registry.rs
slm/tests/: registry_test.rs
storage/: Cargo.toml
storage/src/: community.rs  crypto.rs  hyper_index.rs  lib.rs  repo.rs  session.rs  snapshot.rs  tiering.rs  wal.rs
storage/src/index/: ann.rs  graph.rs  hnsw.rs  mod.rs
storage/src/repo/: backup.rs  mod.rs  replay.rs  search.rs  tests.rs  transaction.rs
storage/tests/: ann_hnsw_test.rs  community_test.rs  tiering_test.rs  wal_crypto_test.rs  wal_policy_test.rs
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx  index.css  types.ts
ui/src/components/: ChatInterface.tsx  DetailsPanel.tsx  GraphExplorer.tsx
