[package]
name = "alayasiki-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
rkyv = { version = "0.7.45", features = ["validation", "std"] }
bytecheck = "0.6"
