[package]
name = "ingestion"
version = "0.1.0"
edition = "2021"

[dependencies]
alayasiki-core = { path = "../core" }
storage = { path = "../storage" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
sha2 = "0.10"
text-splitter = "0.4"
lopdf = "0.31"
dashmap = "5.5"

[dev-dependencies]
tempfile = "3.3"
