[package]
name = "ingestion"
version = "0.1.0"
edition = "2021"

[dependencies]
alayasiki-core = { path = "../core" }
storage = { path = "../storage" }
jobs = { path = "../jobs" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
sha2 = "0.10"
text-splitter = "0.4"
pdf-extract = "0.7"
dashmap = "5.5"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.3"
slm = { path = "../slm" }
