[package]
name = "jobs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
thiserror = "1.0"
anyhow = "1.0"

[dependencies.alayasiki_core]
path = "../core"
package = "alayasiki-core"

[dependencies.storage]
path = "../storage"

[dependencies.slm]
path = "../slm"
