[package]
name = "prototypes"
version = "0.1.0"
edition = "2021"

[dependencies]
rkyv = { version = "0.7.45", features = ["validation"] }
bytecheck = "0.6" # Required for rkyv validation

[dev-dependencies]
criterion = "0.5"
alayasiki-core = { path = "../core" }
storage = { path = "../storage" }
tempfile = "3.3"
tokio = { version = "1.0", features = ["rt-multi-thread"] }

[[bench]]
name = "storage_bench"
harness = false
