[package]
name = "query"
version = "0.1.0"
edition = "2021"

[dependencies]
alayasiki-core = { path = "../core" }
storage = { path = "../storage" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["sync"] }
chrono = "0.4"

[dev-dependencies]
tempfile = "3.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
