[package]
name = "alayasiki-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
alayasiki-core = { path = "../core" }
ingestion = { path = "../ingestion" }
query = { path = "../query" }
storage = { path = "../storage" }
thiserror = "1.0"
tokio = { version = "1.0", features = ["time", "rt-multi-thread", "macros"] }
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
