[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]
alayasiki-core = { path = "../core" }
tokio = { version = "1.0", features = ["fs", "io-util", "sync", "macros", "rt", "rt-multi-thread"] }
thiserror = "1.0"
rkyv = { version = "0.7.45", features = ["validation", "std"] }
bytecheck = "0.6"
crc32fast = "1.3"
bytes = "1.0"
tracing = "0.1"
tempfile = "3.3"
